Fix gallery item alignment

--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -47,6 +47,10 @@
 	}
 }
 
+.wp-caption-text {
+	text-align: center;
+}
+
 .wp-caption-text,
 .gallery-caption {
 	color: $color__link-alt;
@@ -66,7 +70,6 @@
 	display: block;
 	margin-bottom: 0;
 	padding: 0 0.5em 0 0;
-	text-align: left;
 }
 
 p {
