--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -6,6 +6,7 @@
 	display: inline-block;
 	margin: 0 0 1.5em;
 	padding: 0 1em 0 0;
+	text-align: center;
 	vertical-align: top;
 	width: 100%;
 
